--- a/index.html
+++ b/index.html
@@ -11,9 +11,83 @@
 </head>
 
 <body>
-    <h3> Desafío Latam </h1>
-    <p>el arrendador declara que es dueño del inmueble, ubicado en <span class="ubicacion">_____________</span>
-        departamento <span class="departamento">____</span> de la comuna <span class="comuna">_______</span></p>
+
+    <div class="container">
+        <nav class="nav-section">
+        <div class="logo-container">
+            <img class="logo" src="assets/img/logo.png" alt="">
+            <h1>"America"</h1>
+        </div>    
+            <img class="menu" src="./assets/menu.svg" alt="hamburguer-menu" >
+            <ul>
+                <a class="menus" href="https://github.com/gonza23k/Plane-flights">
+                    <li class="inicio">Inicio</li>
+                </a>
+
+                <a class="menus" href="https://www.aa.com/booking/choose-flights/1">
+                    <li class="oferta">Ofertas</li>
+                </a>
+
+                <a class="menus" href="https://www.aa.com/i18n/travel-info/experience/travel-experience.jsp?anchorEvent=false&amp;from=Nav">
+                    <li class="catalogo">Catalogo</li>
+                </a>
+
+                <a class="menus" href="https://github.com/gonza23k">
+                    <li class="contacto">Contacto</li>
+                </a>
+                
+            </ul>
+        </nav>
+        <section class="filter-section">
+            <span>Ordenar por:</span>
+            <select>
+                <option>Precio</option>
+            </select>
+        </section>
+        <main class="main-section">
+            <div class="cards-container">
+                <div class="card">
+                    <img src="assets/img/Cancun.avif" alt="car">
+                    <span>Cancún:Ciudad en México</span>
+                    <button>Comprar Vuelo</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/ibiza.avif" alt="car">
+                    <span>Ibiza:España</span>
+                    <button>Comprar Vuelo</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/suiza.avif" alt="car">
+                    <span>Zurich:Suiza</span>
+                    <button>Comprar Vuelo</button>
+                </div>
+                <div class="card">
+                    <img src="assets/img/argentina.avif" alt="car">
+                    <span>Buenos Aires:Argentina</span>
+                    <button>Comprar Vuelo</button>
+                </div>
+            </div>
+            <div class="navigation">
+                <button><<</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>>></button>
+            </div>
+        </main>
+        <footer class="foot-section">
+            <div>
+                <a class="nav-link" href="https://www.facebook.com/DesafioLatam/?locale=es_LA">
+                    <i class="fa-brands fa-facebook-f fa-lg"></i>
+                </a>
+                <a class="nav-link" href="https://www.instagram.com/desafiolatam/?hl=es-la">
+                    <i class="fa-brands fa-instagram fa-lg"></i>
+                </a>
+            </div>
+            <span>Todos los derechos reservados</span>
+        </footer>
+    </div>
+    
     <script src="./js/script.js"></script>
 </body>
 
